<resources>
    <string name="app_name">FlowNotify</string>
    <string name="app_logo">Flow Notify Logo</string>
    <string name="search_icon">Search Icon</string>
    <string name="empty_tasks">No Tasks Found</string>
    <string name="add_new_task">Add New Task</string>
    <string name="event_title_icon">Event Title</string>
    <string name="close">Close</string>
    <string name="location">Location</string>
    <string name="calendar">Calendar</string>
    <string name="time">Time</string>
    <string name="expand">Expand</string>
    <string name="add_event">Add Event</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="profile_information">Profile Information</string>
    <string name="password_security">Password &amp; Security</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="go_to">Go to</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="contact_support">Contact Support</string>
    <string name="feedback">Feedback</string>
    <string name="app_version">App Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="back">Back</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="info">Information</string>
    <string name="two_factor_authentication">Two-Factor Authentication</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
    <string name="twitter">Twitter</string>
    <string name="copy">Copy to clipboard</string>
    <string name="call">Call</string>
    <string name="menu">Call</string>
</resources>